@@ -1,14 +1,5 @@
 package org.asamk.signal.manager.storage.senderKeys;
 
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-import java.sql.Connection;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.Collection;
-import java.util.UUID;
-
 import org.asamk.signal.manager.api.Pair;
 import org.asamk.signal.manager.storage.Database;
 import org.asamk.signal.manager.storage.Utils;
@@ -21,6 +12,12 @@ import org.slf4j.LoggerFactory;
 import org.whispersystems.signalservice.api.push.ServiceId;
 import org.whispersystems.signalservice.api.util.UuidUtil;
 
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.util.Collection;
+import java.util.UUID;
+
 public class SenderKeyRecordStore implements SenderKeyStore {
 
     private final static Logger logger = LoggerFactory.getLogger(SenderKeyRecordStore.class);
@@ -31,15 +28,17 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     public static void createSql(Connection connection) throws SQLException {
         // When modifying the CREATE statement here, also add a migration in AccountDatabase.java
         try (final var statement = connection.createStatement()) {
-            statement.executeUpdate("                                    CREATE TABLE sender_key (\n"
-                    + "                                      _id INTEGER PRIMARY KEY,\n"
-                    + "                                      uuid BLOB NOT NULL,\n"
-                    + "                                      device_id INTEGER NOT NULL,\n"
-                    + "                                      distribution_id BLOB NOT NULL,\n"
-                    + "                                      record BLOB NOT NULL,\n"
-                    + "                                      created_timestamp INTEGER NOT NULL,\n"
-                    + "                                      UNIQUE(uuid, device_id, distribution_id)\n"
-                    + "                                    ) STRICT;\n" + "");
+            statement.executeUpdate("""
+                                    CREATE TABLE sender_key (
+                                      _id INTEGER PRIMARY KEY,
+                                      uuid BLOB NOT NULL,
+                                      device_id INTEGER NOT NULL,
+                                      distribution_id BLOB NOT NULL,
+                                      record BLOB NOT NULL,
+                                      created_timestamp INTEGER NOT NULL,
+                                      UNIQUE(uuid, device_id, distribution_id)
+                                    ) STRICT;
+                                    """);
         }
     }
 
@@ -59,8 +58,9 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     }
 
     @Override
-    public void storeSenderKey(final SignalProtocolAddress address, final UUID distributionId,
-            final SenderKeyRecord record) {
+    public void storeSenderKey(
+            final SignalProtocolAddress address, final UUID distributionId, final SenderKeyRecord record
+    ) {
         final var key = getKey(address, distributionId);
 
         try (final var connection = database.getConnection()) {
@@ -71,10 +71,13 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     }
 
     long getCreateTimeForKey(final ServiceId selfServiceId, final int selfDeviceId, final UUID distributionId) {
-        final var sql = String.format(
-                "                SELECT s.created_timestamp\n" + "                FROM %s AS s\n"
-                        + "                WHERE s.uuid = ? AND s.device_id = ? AND s.distribution_id = ?\n",
-                TABLE_SENDER_KEY);
+        final var sql = (
+                """
+                SELECT s.created_timestamp
+                FROM %s AS s
+                WHERE s.uuid = ? AND s.device_id = ? AND s.distribution_id = ?
+                """
+        ).formatted(TABLE_SENDER_KEY);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setBytes(1, selfServiceId.toByteArray());
@@ -88,8 +91,12 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     }
 
     void deleteSenderKey(final ServiceId serviceId, final UUID distributionId) {
-        final var sql = String.format("                DELETE FROM %s AS s\n"
-                + "                WHERE s.uuid = ? AND s.distribution_id = ?\n", TABLE_SENDER_KEY);
+        final var sql = (
+                """
+                DELETE FROM %s AS s
+                WHERE s.uuid = ? AND s.distribution_id = ?
+                """
+        ).formatted(TABLE_SENDER_KEY);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setBytes(1, serviceId.toByteArray());
@@ -102,7 +109,9 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     }
 
     void deleteAll() {
-        final var sql = String.format("                DELETE FROM %s AS s\n", TABLE_SENDER_KEY);
+        final var sql = """
+                        DELETE FROM %s AS s
+                        """.formatted(TABLE_SENDER_KEY);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.executeUpdate();
@@ -141,29 +150,34 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     }
 
     private SenderKeyRecord loadSenderKey(final Connection connection, final Key key) throws SQLException {
-        final var sql = String.format(
-                "                SELECT s.record\n" + "                FROM %s AS s\n"
-                        + "                WHERE s.uuid = ? AND s.device_id = ? AND s.distribution_id = ?\n",
-                TABLE_SENDER_KEY);
+        final var sql = (
+                """
+                SELECT s.record
+                FROM %s AS s
+                WHERE s.uuid = ? AND s.device_id = ? AND s.distribution_id = ?
+                """
+        ).formatted(TABLE_SENDER_KEY);
         try (final var statement = connection.prepareStatement(sql)) {
-            statement.setBytes(1, key.serviceId.toByteArray());
-            statement.setInt(2, key.deviceId);
-            statement.setBytes(3, UuidUtil.toByteArray(key.distributionId));
+            statement.setBytes(1, key.serviceId().toByteArray());
+            statement.setInt(2, key.deviceId());
+            statement.setBytes(3, UuidUtil.toByteArray(key.distributionId()));
             return Utils.executeQueryForOptional(statement, this::getSenderKeyRecordFromResultSet).orElse(null);
         }
     }
 
-    private void storeSenderKey(final Connection connection, final Key key, final SenderKeyRecord senderKeyRecord)
-            throws SQLException {
-        final var sqlUpdate = String.format(
-                "                UPDATE %s\n" + "                SET record = ?\n"
-                        + "                WHERE uuid = ? AND device_id = ? and distribution_id = ?\n",
-                TABLE_SENDER_KEY);
+    private void storeSenderKey(
+            final Connection connection, final Key key, final SenderKeyRecord senderKeyRecord
+    ) throws SQLException {
+        final var sqlUpdate = """
+                              UPDATE %s
+                              SET record = ?
+                              WHERE uuid = ? AND device_id = ? and distribution_id = ?
+                              """.formatted(TABLE_SENDER_KEY);
         try (final var statement = connection.prepareStatement(sqlUpdate)) {
             statement.setBytes(1, senderKeyRecord.serialize());
-            statement.setBytes(2, key.serviceId.toByteArray());
-            statement.setLong(3, key.deviceId);
-            statement.setBytes(4, UuidUtil.toByteArray(key.distributionId));
+            statement.setBytes(2, key.serviceId().toByteArray());
+            statement.setLong(3, key.deviceId());
+            statement.setBytes(4, UuidUtil.toByteArray(key.distributionId()));
             final var rows = statement.executeUpdate();
             if (rows > 0) {
                 return;
@@ -171,14 +185,16 @@ public class SenderKeyRecordStore implements SenderKeyStore {
         }
 
         // Record doesn't exist yet, creating a new one
-        final var sqlInsert = String.format(
-                "                INSERT OR REPLACE INTO %s (uuid, device_id, distribution_id, record, created_timestamp)\n"
-                        + "                VALUES (?, ?, ?, ?, ?)",
-                TABLE_SENDER_KEY);
+        final var sqlInsert = (
+                """
+                INSERT OR REPLACE INTO %s (uuid, device_id, distribution_id, record, created_timestamp)
+                VALUES (?, ?, ?, ?, ?)
+                """
+        ).formatted(TABLE_SENDER_KEY);
         try (final var statement = connection.prepareStatement(sqlInsert)) {
-            statement.setBytes(1, key.serviceId.toByteArray());
-            statement.setInt(2, key.deviceId);
-            statement.setBytes(3, UuidUtil.toByteArray(key.distributionId));
+            statement.setBytes(1, key.serviceId().toByteArray());
+            statement.setInt(2, key.deviceId());
+            statement.setBytes(3, UuidUtil.toByteArray(key.distributionId()));
             statement.setBytes(4, senderKeyRecord.serialize());
             statement.setLong(5, System.currentTimeMillis());
             statement.executeUpdate();
@@ -186,8 +202,12 @@ public class SenderKeyRecordStore implements SenderKeyStore {
     }
 
     private void deleteAllFor(final Connection connection, final ServiceId serviceId) throws SQLException {
-        final var sql = String.format("                DELETE FROM %s AS s\n" + "                WHERE s.uuid = ?\n",
-                TABLE_SENDER_KEY);
+        final var sql = (
+                """
+                DELETE FROM %s AS s
+                WHERE s.uuid = ?
+                """
+        ).formatted(TABLE_SENDER_KEY);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setBytes(1, serviceId.toByteArray());
             statement.executeUpdate();
@@ -205,29 +225,5 @@ public class SenderKeyRecordStore implements SenderKeyStore {
         }
     }
 
-    static class Key {
-        private final ServiceId serviceId;
-        private final int deviceId;
-        private final UUID distributionId;
-
-        public Key(@JsonProperty("serviceId") ServiceId serviceId, @JsonProperty("deviceId") int deviceId, @JsonProperty("distributionId") UUID distributionId) {
-            super();
-            this.serviceId = serviceId;
-            this.deviceId = deviceId;
-            this.distributionId = distributionId;
-        }
-
-        public ServiceId serviceId() {
-            return serviceId;
-        }
-
-        public int deviceId() {
-            return deviceId;
-        }
-
-        public UUID distributionId() {
-            return distributionId;
-        }
-
-    }
+    record Key(ServiceId serviceId, int deviceId, UUID distributionId) {}
 }
